--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "vite-vanillajs-tailwindcss-template",
+  "name": "vanillajs-start",
   "private": true,
   "version": "0.0.0",
-  "description": "browser home",
+  "description": "vanillajs-start",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "prepare": "husky install",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -16,30 +17,39 @@
   "keywords": [
     "vite",
     "vanilla",
-    "tailwind",
-    "vite-template"
+    "vanillajs",
+    "moe",
+    "vanillajs-start"
   ],
   "author": "losting",
   "license": "MIT",
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/cz-commitlint": "^17.2.0",
     "@release-it/conventional-changelog": "^5.1.0",
-    "autoprefixer": "^10.4.11",
+    "autoprefixer": "^10.4.13",
+    "commitizen": "^4.2.5",
     "eslint": "^8.23.1",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.18",
     "release-it": "^15.4.2",
     "sass": "^1.54.9",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.2.3",
     "vite": "^3.1.1",
     "vite-plugin-compression": "^0.5.1"
   },
   "lint-staged": {
     "./**/*.{html,js}": "eslint --fix"
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
   }
 }
